--- a/_posts/2024-04-13-PHP项目-根据需要推荐书籍.md
+++ b/_posts/2024-04-13-PHP项目-根据需要推荐书籍.md
@@ -296,27 +296,27 @@ categories: php
 	
 			下面是我的的运行截图
 	
-			![index.html](/1x-web-certificate-gkd/assets/php-practiceProjects-1/1.png)
+			![index.html](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/1.png)
 	
-			![index.html](/1x-web-certificate-gkd/assets/php-practiceProjects-1/2.png)
+			![index.html](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/2.png)
 	
-			![choose.html](/1x-web-certificate-gkd/assets/php-practiceProjects-1/3.png)
+			![choose.html](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/3.png)
 	
-			![about.html](/1x-web-certificate-gkd/assets/php-practiceProjects-1/4.png)
+			![about.html](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/4.png)
 	
 		## 项目第二步,从HTML切换到PHP
 	
 		这一步算是很重要的一步,因为要让浏览器知道我们需要用上*php*,而不是*html*.
 		
-		![更改成PHP](/1x-web-certificate-gkd/assets/php-practiceProjects-1/5.png)
+		![更改成PHP](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/5.png)
 		
 		- 然后,我们需要对这三个PHP内容,进行**修改**,因为里面指向的链接有点问题,我们现在是*php*结尾的文件
 		
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/6.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/6.png)
 		
 		- 然后呢,我们去到浏览器,查看我们对应的URL,能否正确跳转到我自己的定义是这样的,根据自己的实际情况进行更改`http://localhost/chooseApp/index.php`
 		
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/7.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/7.png)
 		
 			然后,需要测试**其他链接**的跳转是否有问题
 		
@@ -328,14 +328,14 @@ categories: php
 	
 	2. 首先,启动你的`XMAPP`,**这里你需要保证的是您的Apache和Mysql都是start状态**
 	
-		 最少需要的两个![XMAPP](/1x-web-certificate-gkd/assets/php-practiceProjects-1/8.png)
+		 最少需要的两个![XMAPP](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/8.png)
 	
 	3. 然后把下面的做了
 		1. 我们在项目文件夹`chooseApp`下创建一个文件夹`config`,这个文件夹的作用是用来**存储我们的配置文件和连接数据库的必须信息**
 		
 		2. 再创建一个`dp.php`**文件**:这个是放在`config`这个文件夹下的,这个*php*定义了数据连接所需的信息,包括了**port**,**psw**等.<font color="red">**需要注意**:*我们这里是一个测试,不是生产环境,在生产环境,暴露psw可能造成不可预估的影响,是绝对禁止的*</font>
 		
-		 ![如图所示](/1x-web-certificate-gkd/assets/php-practiceProjects-1/9.png)
+		 ![如图所示](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/9.png)
 		
 		3. 😊对了,在进行上面这一步的时候,需要注意的是,我们需要先去`MariaDB`中创建一个用户名,和一个`chooseApp`的数据库,包含一个指定字段的表`chooseTitle`
 		
@@ -347,7 +347,7 @@ categories: php
 			mysql -u root -p
 			```
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/10.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/10.png)
 		  	
 			不要输入密码等,直接`Enter`
 		
@@ -371,7 +371,7 @@ categories: php
 			FLUSH PRIVILEGES;
 			```
 		  
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/11.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/11.png)
 		
 		  - **创建选择数据库**
 		
@@ -410,7 +410,7 @@ categories: php
 		  	('UI设计', 'zhaoliu@example.com', 'Adobe PS', '学习对应的PS和Figma可以设计出很好看的UI界面');
 			```
 			
-			![插入表的数据](/1x-web-certificate-gkd/assets/php-practiceProjects-1/12.png)
+			![插入表的数据](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/12.png)
 		
 		4. ​	**更新db.php**
 		
@@ -420,11 +420,11 @@ categories: php
 		
 				**解决方法**:
 		
-				1. 到这个文件夹下,找到`my.ini`![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/21.png)把所有的**`3306`**,修改一下端口,这个端口任意都行
+				1. 到这个文件夹下,找到`my.ini`![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/21.png)把所有的**`3306`**,修改一下端口,这个端口任意都行
 		
-				2. 然后去到任务管理器,**stop自己的原先的mysql服务**![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/22.png)
+				2. 然后去到任务管理器,**stop自己的原先的mysql服务**![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/22.png)
 			
-				3. 再到这里`D:\XAMPP\phpMyAdmin`这个文件![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/23.png)
+				3. 再到这里`D:\XAMPP\phpMyAdmin`这个文件![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/23.png)
 			
 				4. 修改一下
 			
@@ -480,7 +480,7 @@ categories: php
 			
 				通过上面添加的*db.php*,我们可以去到我们的`index.php`去看下是否success.
 			
-				![成功图](/1x-web-certificate-gkd/assets/php-practiceProjects-1/13.png)
+				![成功图](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/13.png)
 			
 			5. 在`choose.php`引入我们的模拟数据
 			
@@ -523,7 +523,7 @@ categories: php
 				<?php endif; ?>
 				```
 			
-				![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/14.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/14.png)
 			
 				然后,我们需要让*php*自己去数据库动态获取数据
 			
@@ -557,7 +557,7 @@ categories: php
 			
 				上面的是对我们之前使用占位去进行修改,引入*php*.
 			
-				![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/15.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/15.png)
 			
 			6. 回到`index.php`,我们需要对表单做出些修改,一样的,让其对错误信息进行修改
 			
@@ -772,7 +772,7 @@ categories: php
 			
 			结果就是,我们确实把数据提交到`mysql`里
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/16.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/16.png)
 			
 			**look,我们在注册模态里,确实写入了这行数据**
 			
@@ -892,7 +892,7 @@ categories: php
 			
 			我们来看看效果,我为了方便演示,我把模态开启不跳转和开启console.log展示
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/17.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/17.png)
 			
 			如上所示,**Success**
 			
@@ -1002,11 +1002,11 @@ categories: php
 			
 			这样,我们来试试看
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/18.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/18.png)
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/19.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/19.png)
 			
-			![](/1x-web-certificate-gkd/assets/php-practiceProjects-1/20.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/php-practiceProjects-1/20.png)
 			
 			**如果需要自己将项目发布于公网或者搭建自己的GitHub镜像站,可以看下最新的一个教程,我更新在老师这个项目下.**
 
