--- a/_posts/2024-04-16-如何搭建自己的GitHub镜像站.md
+++ b/_posts/2024-04-16-如何搭建自己的GitHub镜像站.md
@@ -19,23 +19,23 @@ categories: php
 
 	**这里推荐一个购买域名的网站**:`https://wanwang.aliyun.com/domain`(阿里万国域名注册),我们首先注册一下自己的阿里云账号
 
-	![阿里云万国域名注册官网](/1x-web-certificate-gkd/assets/GitHub-mirror/1.png)
+	![阿里云万国域名注册官网](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/1.png)
 
 	我们点击右上角的立即注册,这一步我就不演示了
 
 	然后,我们在这里输入你想创建的一个域名名
 
-	![这里输入](/1x-web-certificate-gkd/assets/GitHub-mirror/2.png)
+	![这里输入](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/2.png)
 
 	**可以选择自己想要的顶级域名,这里推荐`.top`的顶级域,首年17,再续费也不贵**
 
 	我这里就选择的是*.com*演示,因为我自己已经注册了*.cn和.top*
 
-	![](/1x-web-certificate-gkd/assets/GitHub-mirror/3.png)
+	![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/3.png)
 
 	我们找一个添加进清单
 
-	![](/1x-web-certificate-gkd/assets/GitHub-mirror/4.png)
+	![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/4.png)
 
 	点击立即购买,我就不演示了,😂老师应该不会给我报销的,如果有后续的同学愿意加入自己的图片也行,允许直接修改添加
 
@@ -43,15 +43,15 @@ categories: php
 
 	上面步骤做完之后,你可以在这个控制台看到你的注册的域名
 
-	![](/1x-web-certificate-gkd/assets/GitHub-mirror/5.png)
+	![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/5.png)
 
 	然后我们,点击右边这个*解析*,我们要把这个暂时保存在本地
 
 	就在这里
 
-	![解析](/1x-web-certificate-gkd/assets/GitHub-mirror/6.png)
+	![解析](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/6.png)
 
-	![](/1x-web-certificate-gkd/assets/GitHub-mirror/7.png)
+	![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/7.png)
 
 	把右边两行内容保存下,以便你以后能搞其他内容.
 
@@ -59,23 +59,23 @@ categories: php
 
 	2. 我们接下来去这个网站`https://www.cloudflare.com/zh-cn/`
 
-		![Cloudflare](/1x-web-certificate-gkd/assets/GitHub-mirror/8.png)
+		![Cloudflare](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/8.png)
 
 		有账号就登录,没有自己去注册一个吧
 
-		![](/1x-web-certificate-gkd/assets/GitHub-mirror/9.png)
+		![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/9.png)
 
 		接下来:*进入控制台,新添你的域名*
 
-		![这里](/1x-web-certificate-gkd/assets/GitHub-mirror/10.png)
+		![这里](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/10.png)
 
-		![](/1x-web-certificate-gkd/assets/GitHub-mirror/11.png)
+		![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/11.png)
 
 		这里我们要选择:**免费计划**(如果你跟我一样,访问量比较大,建议买Pro计划,*需要万事达卡或者Visa刷美刀*)
 
 		第二步我们直接不用管,眺到第三步
 
-		![](/1x-web-certificate-gkd/assets/GitHub-mirror/12.png)
+		![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/12.png)
 
 		保存下面的那个`Cloudflare域名服务器`,两行,很重要
 
@@ -83,7 +83,7 @@ categories: php
 
 		3. 然后我们回到第一步的万国域名网的控制台,
 
-			![](/1x-web-certificate-gkd/assets/GitHub-mirror/13.png)
+			![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/13.png)
 
 			点击图上的修改dns,将域名解析给`Cloudflare`托管
 
@@ -95,37 +95,37 @@ categories: php
 
 			4. 专门搞了个新域名,看图
 
-				![Success的图](/1x-web-certificate-gkd/assets/GitHub-mirror/14.png)
+				![Success的图](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/14.png)
 
 				找到红框框的位置点他呀
 
-				![](/1x-web-certificate-gkd/assets/GitHub-mirror/15.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/15.png)
 
 				然后是这个管理work实例
 
-				![](/1x-web-certificate-gkd/assets/GitHub-mirror/16.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/16.png)
 
 				创建一个实例
 
-				![](/1x-web-certificate-gkd/assets/GitHub-mirror/17.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/17.png)
 
 				点击这个`Works`下的创建新**Works**
 
-				![](/1x-web-certificate-gkd/assets/GitHub-mirror/18.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/18.png)
 
 				`name`任意,然后确定
 
 				看到这个
 
-				![](/1x-web-certificate-gkd/assets/GitHub-mirror/19.png)
+				![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/19.png)
 
 				好了,下一步
 
 				5. 点击这里
 
-					![](/1x-web-certificate-gkd/assets/GitHub-mirror/20.png)
+					![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/20.png)
 
-					![](/1x-web-certificate-gkd/assets/GitHub-mirror/21.png)
+					![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/21.png)
 
 					到点这里,输入你的Code
 
@@ -293,7 +293,7 @@ categories: php
 
 					6. 这里就体现一个域名好处
 
-						![](/1x-web-certificate-gkd/assets/GitHub-mirror/23.png)
+						![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/23.png)
 
 						点击`Custom Domain`,记得你需要写入二级域名
 
@@ -301,7 +301,7 @@ categories: php
 
 						**域名(Domain)**:*最后面的那一个`.cn`是顶级域,,然后你的`example.cn`中的example是一级域名,`xxx.example.cn`中的xxx是二级域名*
 
-						![](/1x-web-certificate-gkd/assets/GitHub-mirror/24.png)
+						![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/24.png)
 
 						将这一行的内容导入到cloudflare里,**一般会自动导入**
 
@@ -311,7 +311,7 @@ categories: php
 
 						成功截图是这样的
 
-						![](/1x-web-certificate-gkd/assets/GitHub-mirror/25.png)
+						![](https://raw.githubusercontent.com/hingsli/1x-web-certificate-gkd/main/assets/GitHub-mirror/25.png)
 
 						然后你可以在开源的星辰大海遨游哦
 
